syntax = "proto3";

package app;

import "google/protobuf/empty.proto";
import "messages.proto";

option go_package = ".;gen";
option csharp_namespace = "Onnywrite.SSO.App";

service App {
  rpc Ping(google.protobuf.Empty) returns (google.protobuf.Empty);

  rpc Login(AppRequest) returns (AppResponse);

  rpc Logout(sso.RefreshToken) returns (google.protobuf.Empty);

  rpc Relogin(sso.RefreshToken) returns (AppResponse);

  rpc Check(sso.AccessToken) returns (google.protobuf.Empty);

  rpc SetProfile(sso.ProfileChangeRequest) returns (google.protobuf.Empty);

  rpc GetProfile(sso.AccessToken) returns (sso.Profile);

  rpc GetSessions(sso.AccessToken) returns (sso.Sessions);

  rpc Delete(sso.AccessToken) returns (google.protobuf.Empty);

  rpc Recover(AppRequest) returns (google.protobuf.Empty);
}

message AppRequest {
    sso.SuperAccessToken token = 1;
    int64 service_id = 2;
    sso.SessionInfo info = 3;
}

message AppResponse {
    sso.AccessToken access = 1;
    sso.RefreshToken refresh = 2;
    sso.Profile profile = 3;
}